--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -111,7 +111,7 @@ concurrency:
 
 {%- macro checkout_pytorch(submodules) -%}
       - name: Checkout PyTorch
-        uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
+        uses: actions/checkout@v2
         with:
           # deep clone, to allow use of git merge-base
           fetch-depth: 0
