Update on "ci: Update macOS binary workflows with new templates"
Updates the macos binary workflows to align with the new templates
created to fix issues with ciflow, binary upload, etc.

Follow up to https://github.com/pytorch/pytorch/pull/72426

Signed-off-by: Eli Uriegas <eliuriegasfb.com>

Differential Revision: [D34176435](https://our.internmc.facebook.com/intern/diff/D34176435)

[ghstack-poisoned]

--- a/.github/templates/macos_binary_build_workflow.yml.j2
+++ b/.github/templates/macos_binary_build_workflow.yml.j2
@@ -104,5 +104,5 @@ jobs:
           retention-days: 14
           if-no-files-found: error
           path: "${{ env.PYTORCH_FINAL_PACKAGE_DIR }}"
-  !{{ upload.upload_binaries(config, has_test=False) }}
+  !{{ upload.upload_binaries(config, has_test=False, use_s3=False) }}
 {%- endfor %}
