--- a/.github/templates/linux_ci_workflow.yml.j2
+++ b/.github/templates/linux_ci_workflow.yml.j2
@@ -27,6 +27,7 @@ on:
 {%- endfor %}
 {%- if not is_scheduled and not only_on_pr %}
     branches:
+      - master
       - main
       - release/*
 {%- endif %}
