--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -40,6 +40,7 @@ concurrency:
 
 {%- macro parse_ref(pytorch_directory="") -%}
       - name: Parse ref
+        shell: bash
 {%- if pytorch_directory %}
         working-directory: !{{ pytorch_directory }}
 {%- endif %}
