--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -40,12 +40,12 @@ concurrency:
 
 {%- macro parse_ref(pytorch_directory="") -%}
       - name: Parse ref
-        shell: python
+        shell: bash
 {%- if pytorch_directory %}
         working-directory: !{{ pytorch_directory }}
 {%- endif %}
         id: parse-ref
-        run: exec(open(".github/scripts/parse_ref.py").read())
+        run: python .github/scripts/parse_ref.py
 {%- endmacro -%}
 
 {%- macro upload_test_statistics(build_environment, when="always()", pytorch_directory="", needs_credentials=False) -%}
