--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -45,7 +45,7 @@ concurrency:
         working-directory: !{{ pytorch_directory }}
 {%- endif %}
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: ./.github/scripts/parse_ref.py
 {%- endmacro -%}
 
 {%- macro upload_test_statistics(build_environment, when="always()", pytorch_directory="", needs_credentials=False) -%}
