--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -8,7 +8,7 @@
 
 # NOTE: If testing pytorch/builder changes you can change this variable to change what pytorch/builder reference
 #       the binary builds will check out
-{%- set builder_branch = "main" -%}
+{%- set builder_branch = "cygpath_for_conda" -%}
 
 {%- macro concurrency(build_environment) -%}
 concurrency:
