--- a/.github/templates/macos_binary_build_workflow.yml.j2
+++ b/.github/templates/macos_binary_build_workflow.yml.j2
@@ -17,7 +17,9 @@ name: !{{ build_environment }}
           # shellcheck disable=SC2129
           echo "BINARY_ENV_FILE=${RUNNER_TEMP}/env" >> "${GITHUB_ENV}"
           # shellcheck disable=SC2129
-          echo "PYTORCH_FINAL_PACKAGE_DIR=${RUNNER_TEMP}/artifacts" >> "${GITHUB_ENV}"
+          echo "PYTORCH_FINAL_PACKAGE_DIR=${RUNNER_TEMP}/artifacts/wheel" >> "${GITHUB_ENV}"
+          # shellcheck disable=SC2129
+          echo "LIBTORCH_FINAL_PACKAGE_DIR=${RUNNER_TEMP}/artifacts/libtorch" >> "${GITHUB_ENV}"
           # shellcheck disable=SC2129
           echo "MAC_PACKAGE_WORK_DIR=${RUNNER_TEMP}" >> "${GITHUB_ENV}"
 {%- endmacro %}
@@ -111,5 +113,20 @@ jobs:
           retention-days: 14
           if-no-files-found: error
           path: "${{ env.PYTORCH_FINAL_PACKAGE_DIR }}"
+      - name: Build LibTorch binary
+        if: always()
+        run:
+          python "${PYTORCH_ROOT}/.github/scripts/extract_libtorch.py --whl ${{ env.PYTORCH_FINAL_PACKAGE_DIR }} --out ${{ env.LIBTORCH_FINAL_PACKAGE_DIR}}"
+          echo "${PYTORCH_BUILD_VERSION}" > ${{ env.LIBTORCH_FINAL_PACKAGE_DIR}}/build-version
+          echo "${PYTORCH_BUILD_VERSION}" > ${{ env.LIBTORCH_FINAL_PACKAGE_DIR}}/build-version
+          zip -r "${{ env.LIBTORCH_FINAL_PACKAGE_DIR}}.zip" "${{ env.LIBTORCH_FINAL_PACKAGE_DIR}}"
+          rm -rf "${{ env.LIBTORCH_FINAL_PACKAGE_DIR}}"
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: !{{ config["build_name"] }}
+          retention-days: 14
+          if-no-files-found: error
+          path: "${{ env.LIBTORCH_FINAL_PACKAGE_DIR }}.zip"
   !{{ upload.upload_binaries(config, has_test=False, use_s3=False) }}
 {%- endfor %}
